<resources>
    <string name="app_name">采购限价器</string>
    <string name="xsjg">销售价格</string>
    <string name="zxl">折现率(%)</string>
    <string name="cgjg">采购价格</string>
    <string name="yzf">运杂费</string>
    <string name="zjlx">资金利息(%)</string>
    <string name="txlx">贴现利息(%)</string>
    <string name="mblr">目标利润</string>
    <string name="cgxj">采购限价</string>
    <string name="exit">退出</string>
    <string name="reset">重置</string>
    <string name="title">采购限价器</string>
    <string name="count">计算</string>
</resources>
