<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.administrator.myapplication.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/titlebar"
        android:layout_alignParentTop="true">
        <Button
            android:id="@+id/exit"
            android:background="@drawable/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:text="@string/exit"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/title"
            android:text="@string/title"
            android:layout_alignBottom="@id/exit"
            android:layout_centerHorizontal="true"
            android:textColor="#FFFFFF"
            android:textSize="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/reset"
            android:background="@drawable/btn"
            android:text="@string/reset"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_xsjg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xsjg"
            android:textColor="#000000"
            android:layout_marginTop="20dp"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/edt_xsjg"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tv_xsjg"
            android:layout_toRightOf="@id/tv_xsjg" />

        <TextView
            android:id="@+id/tv_zxl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_xsjg"
            android:text="@string/zxl"
            android:textColor="#000000"
            android:layout_marginTop="20dp"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/edt_zxl"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_zxl"
            android:layout_alignBaseline="@id/tv_zxl" />

        <TextView
            android:id="@+id/tv_cgjg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_zxl"
            android:text="@string/cgjg"
            android:textColor="#000000"
            android:layout_marginTop="20dp"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/edt_cgjg"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tv_cgjg"
            android:layout_toRightOf="@id/tv_cgjg" />

        <TextView
            android:id="@+id/tv_yzf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_cgjg"
            android:text="@string/yzf"
            android:textColor="#000000"
            android:layout_marginTop="20dp"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/edt_yzf"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tv_yzf"
            android:layout_toRightOf="@id/tv_cgjg" />

        <TextView
            android:id="@+id/tv_zjlx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_yzf"
            android:text="@string/zjlx"
            android:textColor="#000000"
            android:layout_marginTop="20dp"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/edt_zjlx"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tv_zjlx"
            android:layout_toRightOf="@id/tv_cgjg" />

        <TextView
            android:id="@+id/tv_txlx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_zjlx"
            android:text="@string/txlx"
            android:textColor="#000000"
            android:layout_marginTop="20dp"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/edt_txlx"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tv_txlx"
            android:layout_toRightOf="@id/tv_cgjg" />

        <TextView
            android:id="@+id/tv_mblr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_txlx"
            android:text="@string/mblr"
            android:textColor="#000000"
            android:layout_marginTop="20dp"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/edt_mblr"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tv_mblr"
            android:layout_toRightOf="@id/tv_cgjg" />

        <Button
            android:id="@+id/count"
            android:text="@string/count"
            android:background="@drawable/count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_mblr"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/tv_cgxj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/count"
            android:text="@string/cgxj"
            android:textColor="#000000"
            android:layout_marginTop="20dp"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/edt_cgxj"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tv_cgxj"
            android:layout_toRightOf="@id/tv_cgjg" />



    </RelativeLayout>
</LinearLayout>
